fix section spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1127,9 +1127,6 @@ footer {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    gap: 70px;
 
   .section-health {
     padding: 50px 0 100px 0;
@@ -1212,6 +1209,7 @@ main {
   }
 
   .section-featured {
+    padding: 50px 0 30px 0;
 
     h1 {
       font-size: 14px;
@@ -1257,6 +1255,7 @@ main {
   }
 
   .section-about {
+    padding: 50px 0;
 
     h1 {
       font-size: 35px;
@@ -1339,6 +1338,7 @@ main {
   }
 
   .services-section {
+    padding-top: 50px;
 
     p,
     h1 {
@@ -1625,7 +1625,7 @@ main {
   }
 
   .appointment-form-section {
-    padding-bottom: 90px;
+    padding: 90px 0;
 
     .options {
       position: absolute;
@@ -1747,6 +1747,7 @@ main {
   }
 
   .section-pricing {
+    padding: 50px 0;
     position: relative;
 
     .checklist {
@@ -1755,6 +1756,8 @@ main {
 
     .container {
       position: relative;
+      padding-top: 50px;
+      padding-bottom: 50px;
 
       &:before {
         content: "";
@@ -1907,6 +1910,7 @@ main {
   }
 
   .doctor-section {
+    padding: 50px 0;
 
     p,
     h1 {
@@ -1993,7 +1997,7 @@ main {
   }
 
   .find-a-doc-section {
-    padding-bottom: 50px;
+    padding: 50px 0;
 
     h1,
     p {
@@ -2095,6 +2099,7 @@ main {
   }
 
   .section-testimonial {
+    padding: 50px 0;
 
     h1,
     p {
@@ -2229,6 +2234,7 @@ main {
   $blog-transition: 0.8s;
 
   .blog-section {
+    padding: 50px 0;
 
     h1,
     p {
@@ -2510,7 +2516,7 @@ main {
 
 #footer {
   .footer-section {
-    padding: 90px 0 50px 0;
+    padding: 50px 0;
 
     p {
       margin: 10px 0;
